--- a/style.css
+++ b/style.css
@@ -2,6 +2,22 @@ body {
     padding-right: 185px;
 }
 
+tr {
+    display: block;
+}
+
+tr::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 0;
+    clear: both;
+}
+
+td {
+    display: block;
+}
+
 .enlarge-it {
     padding:10px;
     background:green;
